--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,27 @@
 <meta charset="utf-8">
 <title>Prehistoric creatures</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link href="css/main.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
 </head>
 
 <body>
 
 
   {{content}}
+
+<header>
+<nav>
+<ul>
+<li><a href="{{site.baseurl}}/">Home</a></li>
+<li><a href="{{site.baseurl}}/dinosaurs">Dinosaurs</a></li>
+<li><a href="{{site.baseurl}}/mammals">Dinosaurs</a></li>
+<li><a href="{{site.baseurl}}/mammals">Dinosaurs</a></li>
+</ul>
+</nav>
+</header>
+  <main>
+  {{content}}
+  </main>
 
 </body>
 </html>
