--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,19 +9,22 @@
 
 <body>
 
-
-  {{content}}
-
 <header>
-<nav>
-<ul>
-<li><a href="{{site.baseurl}}/">Home</a></li>
-<li><a href="{{site.baseurl}}/dinosaurs">Dinosaurs</a></li>
-<li><a href="{{site.baseurl}}/mammals">Dinosaurs</a></li>
-<li><a href="{{site.baseurl}}/mammals">Dinosaurs</a></li>
-</ul>
-</nav>
+<strong>Prehistoric Creatures</strong>
+	<nav>
+		<ul>
+			<li><a href="{{site.baseurl}}/">Home</a></li>
+			<li><a href="{{site.baseurl}}/dinosaurs">Dinosaurs</a></li>
+			<li><a href="{{site.baseurl}}/flying">Flying</a></li>
+			<li><a href="{{site.baseurl}}/mammals">mammal</a></li>
+
+		</ul>
+	</nav>
 </header>
+
+
+
+
   <main>
   {{content}}
   </main>
